// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the Homepage for the logged in user (Rhomennik) 1`] = `
<App
  isLoggedIn={true}
  username="Rhomennik"
>
  <Task>
    <div
      className="Task"
    >
      <p>
        Hello, visitor. Sign in to continue.
      </p>
    </div>
  </Task>
</App>
`;

exports[`should render the Homepage for the logged in user without tasks 1`] = `
<App
  isLoggedIn={true}
  username="Rhome"
>
  <Task>
    <div
      className="Task"
    >
      <p>
        Hello, visitor. Sign in to continue.
      </p>
    </div>
  </Task>
</App>
`;

exports[`should render the homepage for the non logged in user 1`] = `
<App
  isLoggedIn={false}
  username={null}
>
  <Task>
    <div
      className="Task"
    >
      <p>
        Hello, visitor. Sign in to continue.
      </p>
    </div>
  </Task>
</App>
`;
